--- a/wiki/cs/Installing_on_Linux.html
+++ b/wiki/cs/Installing_on_Linux.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/ro (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/sv (0% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
-<li><a href="../bg/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Linux (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Linux (3% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1074; Linux (92% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/uk (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/zh (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -228,12 +228,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111133334
+Cached time: 20260111215652
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.431 seconds
+CPU time usage: 0.107 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 600/1000000
 Post&#8208;expand include size: 9920/2097152 bytes
 Template argument size: 3688/2097152 bytes
@@ -244,19 +244,19 @@ Unstrip post&#8208;expand size: 12848/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   86.590      1 -total
- 25.47%   22.054     18 Template:Code
- 19.54%   16.916      1 Template:Userdocnavi/cs
- 16.90%   14.638      1 Template:Button
-  8.84%    7.651      1 Template:KEY
-  8.04%    6.962      1 Template:Navigation_menu_2
-  7.72%    6.686      3 Template:MenuCommand
-  5.52%    4.778      1 Template:TOCright
-  4.11%    3.558      2 Template:Docnav
-  3.72%    3.221      7 Template:Emphasis
+100.00%   24.038      1 -total
+ 31.50%    7.571      1 Template:Userdocnavi/cs
+ 20.64%    4.960     18 Template:Code
+ 14.85%    3.570      1 Template:Navigation_menu_2
+  8.78%    2.110      2 Template:Docnav
+  7.70%    1.851      7 Template:Emphasis
+  5.08%    1.221     13 Template:Incode
+  4.38%    1.052      1 Template:Button
+  3.87%    0.931      1 Template:TOCright
+  3.85%    0.926      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200182-0!canonical and timestamp 20260111133333 and revision id 1733775. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200182-0!canonical and timestamp 20260111215652 and revision id 1733775. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
