--- a/wiki/bg/Installing_on_Mac.html
+++ b/wiki/bg/Installing_on_Mac.html
@@ -94,12 +94,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111135749
+Cached time: 20260111220158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.069 seconds
-Real time usage: 0.193 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.145 seconds
 Preprocessor visited node count: 160/1000000
 Post&#8208;expand include size: 7142/2097152 bytes
 Template argument size: 2252/2097152 bytes
@@ -110,14 +110,14 @@ Unstrip post&#8208;expand size: 4567/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.902      1 -total
- 58.53%   12.819      1 Template:Userdocnavi/bg
- 24.64%    5.396      2 Template:Docnav
- 15.38%    3.369      2 Template:Code
- 12.47%    2.731      1 Template:Navigation_menu_2
+100.00%    9.312      1 -total
+ 55.03%    5.124      1 Template:Userdocnavi/bg
+ 24.40%    2.272      1 Template:Navigation_menu_2
+ 21.97%    2.046      2 Template:Code
+ 19.79%    1.843      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77378-0!canonical and timestamp 20260111135748 and revision id 1734030. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77378-0!canonical and timestamp 20260111220158 and revision id 1734030. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
