--- a/wiki/cs/Installing_on_Mac.html
+++ b/wiki/cs/Installing_on_Mac.html
@@ -13,7 +13,7 @@
 <li><a href="../ro/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--med" title="Install on Mac (28% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--med" title="Install on Mac (28% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
-<li><a href="../bg/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; Mac (28% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
+<li><a href="../bg/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1089;&#1090;&#1072;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; Mac (67% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--med" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1085;&#1072; Mac (56% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Mac (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Installing_on_Mac.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Mac (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
@@ -88,30 +88,30 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111133653
+Cached time: 20260111215103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.077 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.087 seconds
+Real time usage: 0.183 seconds
 Preprocessor visited node count: 159/1000000
 Post&#8208;expand include size: 7415/2097152 bytes
 Template argument size: 2436/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4580/5000000 bytes
+Unstrip post&#8208;expand size: 4582/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.129      1 -total
- 55.93%    7.903      1 Template:Userdocnavi/cs
- 26.02%    3.676      1 Template:Navigation_menu_2
- 20.82%    2.942      2 Template:Docnav
- 20.14%    2.846      2 Template:Code
+100.00%    6.383      1 -total
+ 51.56%    3.291      1 Template:Userdocnavi/cs
+ 26.40%    1.685      1 Template:Navigation_menu_2
+ 23.56%    1.504      2 Template:Docnav
+ 20.95%    1.337      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21465-0!canonical and timestamp 20260111133653 and revision id 1733786. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21465-0!canonical and timestamp 20260111215103 and revision id 1733786. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
