--- a/wiki/bg/Main_Page.html
+++ b/wiki/bg/Main_Page.html
@@ -119,12 +119,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111124747
+Cached time: 20260111215539
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.205 seconds
 Preprocessor visited node count: 186/1000000
 Post&#8208;expand include size: 5806/2097152 bytes
 Template argument size: 1905/2097152 bytes
@@ -135,13 +135,13 @@ Unstrip post&#8208;expand size: 4126/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.557      1 -total
- 79.75%    6.824      1 Template:Userdocnavi/bg
- 24.59%    2.104      1 Template:Navigation_menu_2
- 16.48%    1.410      5 Template:Clear
+100.00%    5.350      1 -total
+ 75.81%    4.056      1 Template:Userdocnavi/bg
+ 34.07%    1.823      1 Template:Navigation_menu_2
+ 18.07%    0.967      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77428-0!canonical and timestamp 20260111124746 and revision id 1733618. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77428-0!canonical and timestamp 20260111215539 and revision id 1733618. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
