--- a/wiki/cs/Main_Page.html
+++ b/wiki/cs/Main_Page.html
@@ -24,8 +24,9 @@
 <li><a href="../ja/Main_Page.html" class="mw-pt-progress mw-pt-progress--high" title="&#12513;&#12452;&#12531;&#12506;&#12540;&#12472; (82% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Main_Page.html" class="mw-pt-progress mw-pt-progress--high" title="&#46020;&#50880;&#47568; &#51333;&#54633; &#50504;&#45236;&#49436; (94% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p><span id="Introduction"></span>
-&Uacute;VOD
-</p><p>Toto je wiki dokumentace <a rel="nofollow" class="external text" href="http://www.freecad.org">FreeCADu</a>. Informace obsa&#382;en&eacute; zde jsou ty, kter&eacute; budou v offline dokumentaci distribuovan&eacute; s FreeCADem. Pro prohl&iacute;&#382;en&iacute; dokumentace pak m&aacute;te dv&#283; mo&#382;nosti: bu&#271; v u&#382;ivatelsk&eacute;m centru nebo v manu&aacute;lu. Pr&aacute;v&#283; se na tom pracuje, dokumentace je ps&aacute;na komunitou u&#382;ivatel&#367; a v&yacute;voj&aacute;&#345;&#367; FreeCADu. Najdete-li informace kter&eacute; jsou chybn&eacute; nebo kter&eacute; chyb&iacute;, pros&iacute;m <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">pomozte</a>!
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
+<p>Toto je wiki dokumentace <a rel="nofollow" class="external text" href="http://www.freecad.org">FreeCADu</a>. Informace obsa&#382;en&eacute; zde jsou ty, kter&eacute; budou v offline dokumentaci distribuovan&eacute; s FreeCADem. Pro prohl&iacute;&#382;en&iacute; dokumentace pak m&aacute;te dv&#283; mo&#382;nosti: bu&#271; v u&#382;ivatelsk&eacute;m centru nebo v manu&aacute;lu. Pr&aacute;v&#283; se na tom pracuje, dokumentace je ps&aacute;na komunitou u&#382;ivatel&#367; a v&yacute;voj&aacute;&#345;&#367; FreeCADu. Najdete-li informace kter&eacute; jsou chybn&eacute; nebo kter&eacute; chyb&iacute;, pros&iacute;m <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">pomozte</a>!
 </p><p><span id="The_hubs"></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -124,7 +125,7 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
@@ -135,13 +136,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111053314
+Cached time: 20260111214028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.214 seconds
-Preprocessor visited node count: 172/1000000
+CPU time usage: 0.136 seconds
+Real time usage: 0.599 seconds
+Preprocessor visited node count: 175/1000000
 Post&#8208;expand include size: 5686/2097152 bytes
 Template argument size: 1905/2097152 bytes
 Highest expansion depth: 5/100
@@ -151,13 +152,13 @@ Unstrip post&#8208;expand size: 4140/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.648      1 -total
- 89.97%   14.979      1 Template:Userdocnavi/cs
- 19.79%    3.294      1 Template:Navigation_menu_2
-  9.14%    1.521      1 Template:Clear
+100.00%   26.924      1 -total
+ 90.68%   24.415      1 Template:Userdocnavi/cs
+ 40.37%   10.868      1 Template:Navigation_menu_2
+  8.29%    2.232      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11512-0!canonical and timestamp 20260111053314 and revision id 1732069. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11512-0!canonical and timestamp 20260111214028 and revision id 1736521. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
