--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -754,12 +754,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212054
+Cached time: 20260111215736
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.229 seconds
-Real time usage: 0.288 seconds
+CPU time usage: 0.274 seconds
+Real time usage: 0.444 seconds
 Preprocessor visited node count: 1365/1000000
 Post&#8208;expand include size: 64316/2097152 bytes
 Template argument size: 27005/2097152 bytes
@@ -770,19 +770,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.480      1 -total
- 16.16%    8.156      8 Template:ASCII
- 11.07%    5.587      1 Template:Userdocnavi/cs
-  6.53%    3.298      1 Template:Gesture_Navigation
-  5.82%    2.938      1 Template:OpenSCAD_Navigation
-  5.23%    2.640      1 Template:Blender_Navigation
-  4.82%    2.431      1 Template:SiemensNX_Navigation
-  4.69%    2.366     55 Template:KEY
-  4.61%    2.329      1 Template:SolidWorks_Navigation
-  4.16%    2.099      1 Template:Touchpad_Navigation
+100.00%   66.094      1 -total
+ 13.21%    8.733      8 Template:ASCII
+  9.54%    6.302      1 Template:MayaGesture_Navigation
+  8.65%    5.718      1 Template:Userdocnavi/cs
+  7.14%    4.717      1 Template:OpenCascade_Navigation
+  6.78%    4.480      1 Template:OpenSCAD_Navigation
+  5.50%    3.638      1 Template:Gesture_Navigation
+  4.78%    3.162      1 Template:Blender_Navigation
+  4.71%    3.116     55 Template:KEY
+  4.35%    2.876      1 Template:TinkerCAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111212053 and revision id 1736435. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111215736 and revision id 1736435. Rendering was triggered because: diff-page
  -->
 </div>
 </div><script src="../site.js"></script>
