--- a/wiki/cs/Online_Help_Startpage.html
+++ b/wiki/cs/Online_Help_Startpage.html
@@ -68,12 +68,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111125630
+Cached time: 20260111214111
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.057 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.161 seconds
 Preprocessor visited node count: 128/1000000
 Post&#8208;expand include size: 6678/2097152 bytes
 Template argument size: 2067/2097152 bytes
@@ -84,13 +84,13 @@ Unstrip post&#8208;expand size: 4327/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.910      1 -total
- 78.12%    7.742      1 Template:Userdocnavi/cs
- 25.35%    2.512      1 Template:Navigation_menu_2
- 20.13%    1.995      2 Template:Docnav
+100.00%    6.996      1 -total
+ 64.24%    4.494      1 Template:Userdocnavi/cs
+ 33.52%    2.345      2 Template:Docnav
+ 25.67%    1.796      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22208-0!canonical and timestamp 20260111125630 and revision id 1733638. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22208-0!canonical and timestamp 20260111214111 and revision id 1733638. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
