--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -156,12 +156,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111122628
+Cached time: 20260111214356
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.126 seconds
-Real time usage: 0.277 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.110 seconds
 Preprocessor visited node count: 105/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -172,14 +172,14 @@ Unstrip post&#8208;expand size: 4518/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.387      1 -total
- 72.31%   15.465      1 Template:Userdocnavi/bg
- 38.82%    8.303      1 Template:Navigation_menu_2
- 12.06%    2.579      2 Template:VersionMinus
- 10.29%    2.201      2 Template:Version
+100.00%    7.018      1 -total
+ 70.03%    4.915      1 Template:Userdocnavi/bg
+ 29.23%    2.051      1 Template:Navigation_menu_2
+ 13.78%    0.967      2 Template:Version
+ 10.55%    0.740      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260111122628 and revision id 1733559. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260111214356 and revision id 1733559. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
