--- a/wiki/cs/Online_Help_Toc.html
+++ b/wiki/cs/Online_Help_Toc.html
@@ -38,8 +38,8 @@
 <ul><li>Pr&aacute;ce s programem FreeCAD
 <ul><li><a href="../cs/Getting_started.html" title="Getting started/cs">Za&#269;&iacute;n&aacute;me</a></li>
 <li><a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Navigace my&scaron;&iacute;</a></li>
-<li><a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Metody v&yacute;b&#283;ru</a></li>
-<li><a href="../index.php?title=Navigation_Cube/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Navigation Cube/cs (page does not exist)">Naviga&#269;n&iacute; kostka</a></li>
+<li><a href="../cs/Selection_methods.html" title="Selection methods/cs">Metody v&yacute;b&#283;ru</a></li>
+<li><a href="../cs/Navigation_Cube.html" title="Navigation Cube/cs">Naviga&#269;n&iacute; kostka</a></li>
 <li><a href="../cs/Document_structure.html" title="Document structure/cs">Struktura dokumentu</a></li>
 <li><a href="../cs/Property_View.html" title="Property View/cs">Zobrazen&iacute; vlastnost&iacute;</a></li></ul></li></ul>
 <ul><li><a href="../cs/Workbenches.html" title="Workbenches/cs">Pracovn&iacute; prost&#345;ed&iacute;</a>
@@ -122,7 +122,7 @@
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
 <li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
@@ -133,12 +133,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111084354
+Cached time: 20260111214138
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.086 seconds
-Real time usage: 0.135 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.231 seconds
 Preprocessor visited node count: 93/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -149,14 +149,14 @@ Unstrip post&#8208;expand size: 4540/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.776      1 -total
- 63.05%    5.533      1 Template:Userdocnavi/cs
- 27.70%    2.431      1 Template:Navigation_menu_2
- 17.28%    1.517      2 Template:VersionMinus
- 16.69%    1.465      2 Template:Version
+100.00%   11.352      1 -total
+ 70.44%    7.996      1 Template:Userdocnavi/cs
+ 29.72%    3.374      1 Template:Navigation_menu_2
+ 15.02%    1.705      2 Template:VersionMinus
+ 11.39%    1.293      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24211-0!canonical and timestamp 20260111084354 and revision id 1732351. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:24211-0!canonical and timestamp 20260111214138 and revision id 1732351. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="../site.js"></script>
