--- a/wiki/bg/Tutorials.html
+++ b/wiki/bg/Tutorials.html
@@ -1790,12 +1790,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111165740
+Cached time: 20260111220241
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.306 seconds
-Real time usage: 0.517 seconds
+CPU time usage: 0.286 seconds
+Real time usage: 0.366 seconds
 Preprocessor visited node count: 405/1000000
 Post&#8208;expand include size: 7346/2097152 bytes
 Template argument size: 2406/2097152 bytes
@@ -1806,15 +1806,15 @@ Unstrip post&#8208;expand size: 53767/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  342.191      1 -total
-  2.33%    7.970      1 Template:Userdocnavi/bg
-  0.92%    3.165      2 Template:Docnav
-  0.91%    3.120      1 Template:TOCright
-  0.64%    2.187      1 Template:Navigation_menu_2
-  0.34%    1.157      1 Template:VeryImportantMessage
+100.00%  196.029      1 -total
+  3.04%    5.969      1 Template:Userdocnavi/bg
+  1.39%    2.728      1 Template:Navigation_menu_2
+  1.07%    2.097      2 Template:Docnav
+  0.52%    1.027      1 Template:VeryImportantMessage
+  0.47%    0.929      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:102048-0!canonical and timestamp 20260111165739 and revision id 1735290. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:102048-0!canonical and timestamp 20260111220241 and revision id 1735290. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
